--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,17 @@
             <artifactId>javafx-fxml</artifactId>
             <version>13</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.22</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.2</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -36,7 +47,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
-                    <mainClass>com.mycompany.gerenciadorcolecoes.App</mainClass>
+                    <mainClass>start.App</mainClass>
                     <executable>/usr/lib/jvm/java-11-openjdk-amd64/bin/java</executable>
                 </configuration>
                 <executions>
